fix supporters block on dark mode

--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -39,7 +39,7 @@
     border-bottom-color: #273646;
 }
 
-[data-md-color-scheme="state"] .phalcon-blog__sponsors-items a {
+[data-md-color-scheme="slate"] .phalcon-blog__sponsors-items a {
     background-color: #ffffffb3;
 }
 
